@@ -72,19 +72,26 @@ analogously to the unit-diagonal triangular matrices:
 <<unit-diag>>=
 str(I3 <- Diagonal(3)) ## empty 'x' slot
 
-getClass("diagonalMatrix") ## extending "denseMatrix"
+getClass("diagonalMatrix") ## extending "sparseMatrix"
 @
-We have implemented diagonal matrices as \emph{dense} rather than sparse
-matrices, for the following reasons:
-\begin{enumerate}
-\item The \code{diag()}onal (vector) is the basic part of such a matrix,
-  and this is simply the \code{x} slot unless the \code{diag} slot is \code{"U"},
-  the unit-diagonal case, which is the identity matrix.
-\item given '1)', it does not make much sense to store \emph{where} the
-  matrix is non-zero.  This contrasts with all sparse matrix
-  implementations, and hence we did not want to call a diagonal matrix ``sparse''.
-\end{enumerate}
+Originally, we had implemented diagonal matrices as \emph{dense} rather than sparse
+matrices.  After several years it became clear that this had not been
+helpful really both from a user and programmer point of view.
+So now, indeed the \code{"diagonalMatrix"} class does extend the
+\code{"sparseMatrix"} one.  However, we do \emph{not} store explicitly
+where the non-zero entries are, and the class does \emph{not} extend any of
+the typical sparse matrix classes, \code{"CsparseMatrix"},
+\code{"TsparseMatrix"}, or \code{"RsparseMatrix"}.
+Rather, the \code{diag()}onal (vector) is the basic part of such a matrix,
+and this is simply the \code{x} slot unless the \code{diag} slot is \code{"U"},
+the unit-diagonal case, which is the identity matrix.
 
+Further note, e.g., from the \code{?$\,$Diagonal} help page, that we provide
+(low level) utility function
+\code{.sparseDiagonal()} with wrappers
+\code{.symDiagonal()} and \code{.trDiagonal()} which will provide diagonal
+matrices inheriting from \code{"CsparseMatrix"} which may be advantageous
+in \emph{some cases}, but less efficient in others, see the help page.
 
 
 \section{Matrix Transformations}
